<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_coleccion">
    <action
        android:id="@+id/action_global_ajustesFragment"
        app:destination="@id/ajustesFragment">
    </action>

    <action
        android:id="@+id/action_global_cuentaFragment"
        app:destination="@id/cuentaFragment">
    </action>

    <fragment
        android:id="@+id/navigation_coleccion"
        android:name="es.unex.giiis.marvelbook.ui.coleccion.ColeccionFragment"
        android:label="@string/coleccion"
        tools:layout="@layout/fragment_coleccion" />

    <fragment
        android:id="@+id/navigation_mazo"
        android:name="es.unex.giiis.marvelbook.ui.mazo.MazoFragment"
        android:label="@string/mazo"
        tools:layout="@layout/fragment_mazo" />

    <fragment
        android:id="@+id/navigation_tienda"
        android:name="es.unex.giiis.marvelbook.ui.tienda.TiendaFragment"
        android:label="@string/tienda"
        tools:layout="@layout/fragment_tienda" />

    <fragment
        android:id="@+id/ajustesFragment"
        android:name="es.unex.giiis.marvelbook.ui.configuracion.ConfiguracionFragment"
        android:label="Configuración">
        <argument
            android:name="usuarioID"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <fragment
        android:id="@+id/cuentaFragment"
        android:name="es.unex.giiis.marvelbook.ui.cuenta.CuentaFragment"
        android:label="@string/cuenta"
        tools:layout="@layout/fragment_cuenta">
        <argument
            android:name="usuarioID"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>
</navigation>