<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.CuentaFragment">

    <TextView
        android:id="@+id/texto_modificar"
        android:layout_width="316dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/alata"
        android:text="@string/modificar_datos_de_la_cuenta"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nameSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/nameSetting"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/nombre_UsuarioM"
        android:ems="10"
        android:hint="@string/nombre_UsuarioM_C"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/emailSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_modificar" />

    <EditText
        android:id="@+id/emailSettings"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/email_UsuarioM"
        android:ems="10"
        android:hint="@string/email_UsuarioM"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSetting" />

    <EditText
        android:id="@+id/passwordSettings"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/password_UsuarioM"
        android:ems="10"
        android:hint="@string/password_UsuarioM"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/password2Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSettings" />

    <EditText
        android:id="@+id/password2Settings"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/repPassword_UsuarioM"
        android:ems="10"
        android:hint="@string/repPassword_UsuarioM"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/botonModificarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSettings" />

    <Button
        android:id="@+id/botonModificarUsuario"
        android:layout_width="255dp"
        android:layout_height="59dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/boton_registro"
        android:text="@string/Modificar_UsuarioM"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2Settings"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>